got danfojs working with parcel

--- a/src/test.html
+++ b/src/test.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang=en>
+<html lang="en">
   <head>
-    <meta charset=utf-8>
+    <meta charset="utf-8" />
     <title>blah</title>
+    <script src="https://cdn.jsdelivr.net/npm/danfojs@1.1.2/lib/bundle.min.js"></script>
     <script type="module">
-      import { hello } from "./blah.ts"
+      import { hello } from "./blah.ts";
     </script>
   </head>
   <body>
