add sidebar to select resources

--- a/src/site/codebook.html
+++ b/src/site/codebook.html
@@ -15,6 +15,17 @@
         <div id="bundle-version"></div>
         <p id="bundle-description"></p>
       </header>
+      <nav>
+        <span
+          style="font-size: 30px; cursor: pointer"
+          id="open-nav"
+          class="sidenav-btn"
+          >&#9776;</span
+        >
+        <div id="nav-content" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn">&times;</a>
+        </div>
+      </nav>
       <main>
         <div class="left">
           <div class="table-wrapper">
