--- a/src/site/codebook.html
+++ b/src/site/codebook.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>main/teacher_calibration (20230902.f63be38-dev)</title>
+    <title>sidd: Standalone Interactive Data Dictionary</title>
     <style>
       @import "style.scss";
     </style>
